<resources>
    <string name="app_name">Quick Loan Calc</string>
    <string name="loan_calc_title">Loan Calculator</string>
    <string name="action_settings">Settings?</string>
    <string name="loan_duration_months">Loan Duration (Months)</string>
    <string name="loan_interest_rate_year">Loan Interest Rate (APR)</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="calculate_payment">Calculate Payment</string>
    <string name="edit_loanAmount">0</string>
    <string name="start_hint">0.0</string>

</resources>
